vbnc/vbnc/vbnc/tests/Errors/30532.vb
Class T
    Const M_Double As Double = #1/1/2008#
End Class